# ARC-Encoder

./: .gitignore  README.md  create_data_mix.py  create_data_mix_configs.py  create_experiments.py  embedddings_pretrained.npy  embeddings.sh  experiments.py  experiments.sh  launch_eval.sh  load_datasets.ipynb  mistral_train_example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  synthetize_data.py  synthetize_ft_data.py  synthetize_pisco_ft_data.py  synthetize_pisco_ftfs_data.py  test_generation.ipynb  train.py  vector_analysis.py
config/: ARC4_Encoder_llama_new_full5shot_test.yaml  CP8_L3B_MLP2_M7B_best_20k_test.yaml  CP8_default_LoRA_fft_test.yaml  OLMO_test.yaml  _instruct.yaml  debug_decompress.yaml  debug_ft.yaml  debug_instruct.yaml  debug_llama.yaml  debug_mistral.yaml  debug_pretrain.yaml  default.yaml  default_finetuning.yaml  default_gemma.yaml  default_llama.yaml  default_mistral.yaml  mistral_nan_test.yaml  multi_decoder_default_L3_MLP_fftdirect_longer_v2_test.yaml  multi_decoder_default_L3_MLP_test.yaml  multi_decoder_default_trueL3_MLP_fft4_v3_test.yaml  multi_decoder_distill_CP4.yaml  multi_decoder_nodist_CP8.yaml  multi_decoder_nodist_CP8_ft.yaml  pretraining_instruct.yaml  test.yaml  test_trueL3_MLP_fft4_full5shot.yaml  test_trueL3_MLP_fft4_full5shot_exp.yaml  test_trueL3_MLP_fft4_full5shot_exp_copy.yaml  test_trueL3_MLP_fft4_full5shot_exp_oldmodel.yaml  test_trueL3_MLP_fft4_full5shot_exp_rmvbigbatch.yaml  test_trueL3_MLP_fft4_full5shot_exp_seed16.yaml  test_trueL3_MLP_fft4_full5shot_exp_seed32.yaml  test_trueL3_MLP_fft4_full5shot_exp_test.yaml  test_trueL3_MLP_fft4_full5shot_exp_test_last.yaml  test_trueL3_MLP_fft4_full5shot_v2.yaml
config/default/: default_gemma.yaml  default_llama.yaml  default_mistral.yaml
config/icae/: icae_16memtoks_llama.yaml  icae_16memtoks_mistral.yaml  icae_32memtoks_llama.yaml  icae_32memtoks_mistral.yaml  icae_64memtoks_llama.yaml  icae_64memtoks_mistral.yaml  icae_8memtoks_llama.yaml  icae_8memtoks_mistral.yaml
config/models/: default_gemma.yaml  default_llama.yaml
config/pisco/: Pisco_16memtoks_llama_v2.yaml  Pisco_16memtoks_mistral_v2.yaml  Pisco_32memtoks_llama_v2.yaml  Pisco_32memtoks_mistral_v2.yaml  Pisco_8memtoks_llama.yaml  Pisco_8memtoks_llama_v2.yaml  Pisco_8memtoks_mistral.yaml  Pisco_8memtoks_mistral_v2.yaml
configs/: ARC4_Encoder_llama_new_test.yaml  finetuning_ARC4_Encoder_llama.yaml  finetuning_ARC4_Encoder_mistral.yaml  finetuning_ARC4_Encoder_multi.yaml  finetuning_ARC8_Encoder_llama.yaml  finetuning_ARC8_Encoder_mistral.yaml  finetuning_to_add_OLMo.yaml  pretraining_ARC8_Encoder_llama.yaml
embed_llm/: __init__.py  train.py
embed_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
embed_llm/data/: args.py  dataset.py  (+8 more)
retrieval/: embeddings.py  passage_retrieval.py
scripts/: ablation_exps.sh  eval.sh  finetuning_exps.sh  instruct_exps.sh  other_model_eval.sh  passage_retriev.sh  pretraining_experiments.sh  pretraining_exps.sh  pretraining_side_experiments.sh  retrieval.sh  synt_data.sh
(+142 files in other folders)
