[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embed_llm"
version = "0.0"
authors = [
    {name = "Hippolyte Pilchen"},
    {name = "Edouard Grave"},
    {name = "Patrick Pérez"},
]
description = "Embedding augmented LLM experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
# dependencies = [
#     'fire==0.7.0 ',
#     'simple-parsing==0.1.6',
#     'pyyaml==6.0.2',
#     'safetensors==0.4.5',
#     'tensorboard==2.18.0',
#     'tqdm',
#     'notebook',
#     'mistral-common>=1.3.1',
#     'numpy == 1.26.4',
#     'sentencepiece == 0.1.99',
#     'torch==1.13.1',
#     'triton==2.2',
#     'xformers==0.0.24',
#     'tiktoken==0.4.0',
#     'blobfile',
#     'gritlm',
#     'faiss-gpu',
#     'transformers',
#     'einops',
#     'accelerate,
# ]

dynamic = ["dependencies"]

[tool.setuptools]
packages = ["embed_llm"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}