[project]
name = "clean-hp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "blobfile>=3.1.0",
    "dataclasses>=0.8",
    "datasets>=4.2.0",
    "einops>=0.8.1",
    "fast-pytorch-kmeans>=0.2.2",
    "fire>=0.7.1",
    "llmlingua>=0.2.2",
    "mistral-common",
    "mistral-inference>=0.0.0",
    "nltk>=3.9.1",
    "numpy<2",
    "pathlib>=1.0.1",
    "pyyaml>=6.0.2",
    "rouge-score>=0.1.2",
    "ruff>=0.13.2",
    "sacrebleu>=2.5.1",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "simple-parsing>=0.1.7",
    "tensorboard>=2.20.0",
    "torch==2.2",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "wandb>=0.21.3",
    "xformers==0.0.24",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["embed_llm*"]
namespaces = false